2025-07-27  Zhengyi Fu  <i@fuzy.me>

	* init.el (embark-cycle-key): Set to "C-.".

2025-07-27  Zhengyi Fu  <i@fuzy.me>

	* init.el (copy-json-as-lisp): New command.

2025-07-25  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/modify-other-keys.el: Refactor.

2025-07-25  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/modify-other-keys.el: New file.

2025-07-25  Zhengyi Fu  <i@fuzy.me>

	* init.el (remote-eat): Remove connection local variables profile.
	(eat-exec@connection-local-vars): Remove advice.

2025-07-24  Zhengyi Fu  <i@fuzy.me>

	* early-init.el (kill-do-not-save-duplicates): Set to t.

2025-07-24  Zhengyi Fu  <i@fuzy.me>

	Configuration for Niri

	* init.el (+import-env-var-for-display): New function.  Add to
	`server-after-make-frame-hook'.
	(+niri-xdg-open): New function.  Set as default browser if Emacs
	is running in Niri session.

2025-07-24  Zhengyi Fu  <i@fuzy.me>

	* init.el (eat-tramp-shells): Configure shell for scpx method.

2025-07-24  Zhengyi Fu  <i@fuzy.me>

	Update gptel configuration

	* site-lisp/gptel-config.el (+gptel-auto-scroll-safe): Set
	`scroll-preserve-screen-position' locally to t.
	* init.el: Bind "C-j" to `gptel-send' in `gptel-mode-map'.
	Bind "C-j" to `gptel-aibo-send' in `gptel-aibo-mode-map'.
	Removed `olivetti-mode' from `gptel-mode-hook'.
	(toggle-map): Bind "C" to `olivetti-mode'.
2025-07-23  Zhengyi Fu  <i@fuzy.me>

	* init.el (+custom-fontset): Only update the faces when
	window-system is non-nil.

2025-07-22  Zhengyi Fu  <i@fuzy.me>

	Replace term-keys with kkp

	* init.el:
	* packages.el


2025-07-22  Zhengyi Fu  <i@fuzy.me>

	Add history to `elfeed-search-live-filter'

	* init.el (+elfeed-search-live-filter-with-history): New command.
	(+elfeed-search-live-filter-history): New variable.

2025-07-22  Zhengyi Fu  <i@fuzy.me>

	* init.el: Change mode of tramp-compat-temporary-file-directory to
	700.

2025-07-20  Zhengyi Fu  <i@fuzy.me>

	* init.el (elfeed-db): Fix the file watcher callback.

2025-07-20  Zhengyi Fu  <i@fuzy.me>
